fix file mode issue

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,6 @@
         "terminal.integrated.shell.linux": "/bin/bash"
       }
     }
-  }
+  },
+  "postCreateCommand": "git config core.fileMode false"
 }
