fix current version

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -25,7 +25,7 @@
     {
       "fileMatch": ["^\\.github/workflows/.*\\.ya?ml$"],
       "matchStrings": [
-        "pip install mkdocs-material==(?<version>\\d+\\.\\d+\\.\\d+)"
+        "pip install mkdocs-material==(?<currentValue>\\d+\\.\\d+\\.\\d+)"
       ],
       "depNameTemplate": "mkdocs-material",
       "versioningTemplate": "semver",
